--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,5 +111,4 @@ set (CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE        ${PROJECT_SOURCE_DIR}/bin)
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${PROJECT_SOURCE_DIR}/bin)
 set (CS327A_BINARY_DIR ${PROJECT_SOURCE_DIR}/bin)
 
-add_subdirectory(lecture2_demo)
-
+# add_subdirectory(lecture2_demo)
