--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,5 +118,6 @@ set (CS327A_BINARY_DIR ${PROJECT_SOURCE_DIR}/bin)
 add_subdirectory(hw1)
 add_subdirectory(hw1_sol)
 add_subdirectory(hw2)
+add_subdirectory(hw2_sol)
 add_subdirectory(hw4)
 
